--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,13 @@
 <h2>Create a new drone</h2>
+<form action="/drones/create" method="post">
+   <label for='name'>Name</label>
+  <input type='text' name='name' />
+
+   <label for='propellers'>propellers</label>
+  <input type='number' name='propellers' />
+
+   <label for='Speed'>Speed</label>
+  <input type='number' name='maxSpeed' />
+
+  <button type='submit'>Create Drone</button>
+</form>
