--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,10 @@
 <h2>Available drones</h2>
+
+{{#each drones}}
+  <div>
+  <h2>{{ this.name }}</h2>
+    <p>{{this.propellers}}</p>
+    <p>{{this.maxSpeed}}</p>
+  </div>
+
+   {{/each}}
